--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Upgrade pip
+          command: pip install --upgrade pip
+      - run:
           name: Install dependencies
           command: |
             pip install -r requirements.txt
