upgraded the config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: Upgrade pip
-          command: pip install --upgrade pip
+          command: sudo pip install --upgrade pip
       - run:
           name: Install dependencies
           command: |
