--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,12 @@ jobs:
       - run:
           name: Run tests
           command: |
-            python test.py
+            python C:\Users\DELL\Downloads\waferFaultDetection (2)\waferFaultDetection\code\WaferFaultDetection_new\tests\test.py  # Adjust the path to your test.py file
+            
 
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
+
