--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
     docker:
       - image: circleci/python:3.6.2-stretch-browsers
         auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+          username: $adepusainaveencodespeaks
+          password: $Harekrishna@123456 # context / project UI env-var reference
     steps:
       - checkout
       - restore_cache:
@@ -16,8 +16,8 @@ jobs:
       - run:
           name: Install Python deps in a venv
           command: |
-            echo "export TAG=0.1.${CIRCLE_BUILD_NUM}" >> $BASH_ENV
-            echo "export IMAGE_NAME=${DOCKER_IMAGE_NAME}" >> $BASH_ENV
+            echo 'export TAG=0.1.${CIRCLE_BUILD_NUM}' >> $BASH_ENV
+            echo 'export IMAGE_NAME=${DOCKER_IMAGE_NAME}' >> $BASH_ENV
             python3 -m venv venv
             . venv/bin/activate
             pip install --upgrade pip
