--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           name: Pushing to heroku registry
           command: |
             heroku container:login
-            #heroku ps:scale web=1 -a $HEROKU_APP_NAME
+            heroku ps:scale web=1 -a $HEROKU_APP_NAME
             heroku container:push web -a $HEROKU_APP_NAME
             heroku container:release web -a $HEROKU_APP_NAME
 
